# Model-Predictive-Control-

./: .gitignore  LICENSE  README.md  env.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
config/: mpc.yaml  simulation.yaml
mpc_python/: __init__.py  mpc_demo_mujoco.py  mpc_demo_nosim.py
mpc_python/cvxpy_mpc/: __init__.py  cvxpy_mpc.py  metrics.py  planners.py  utils.py
mpc_python/models/mushr/: README.md  mushr.xml
tests/: test_lane_change.py  test_metrics.py  test_mpc_basic.py  test_save_log.py
